--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             </div>
 
-            <div class="artifact" style="flex-direction: row-reverse;">
+            <div class="artifact">
                 
                 <div class="artifact-img frame">
                     <img src="imgs/opera-damanhur.jpg" alt="أوبرا دمنهور">
