--- a/specific-tabs/opera-damanhur.html
+++ b/specific-tabs/opera-damanhur.html
@@ -7,6 +7,7 @@
     
     
     <link rel="stylesheet" href="specific.css">
+    <link rel="icon" type="image/x-icon" href="../imgs/elbehera.png">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
