--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                 </a>
         </div>
 
-        <div class="logo">
+        <div class="logo"><a href="index.html">
             <img src="imgs/elbehera.png">
+        </a>
         </div>
 
         <nav class="pc">
