--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
 
         <!-- SECTION 1 -->
-        <section id="building" class="wall" style="--bgImg: url('https://static.vecteezy.com/system/resources/thumbnails/022/466/674/small/black-and-white-atmospheric-concrete-wall-texture-photo.jpg')">
+        <section id="building" class="wall" style="--bgImg: url('https://img.freepik.com/free-photo/abstract-white-surface-with-clight-pores_1194-7514.jpg?semt=ais_hybrid&w=740&q=80')">
         
                                 <div class="artifact" id="opera-damanhur">
                                     
@@ -220,7 +220,7 @@ ssssssssssssssssssssss
         </section>
 
         <!-- SECTION 3: Ancient (Stone) -->
-        <section id="place" class=" wall section stone-bg" style="--bgImg: url('https://i.pinimg.com/736x/37/74/72/377472ac02868dbce8b477a46eb6c8b7.jpg')">
+        <section id="place" class=" wall section stone-bg" style="--bgImg: url('https://pbs.twimg.com/media/G6_1aW9W4AEbKLO?format=jpg&name=4096x4096')">
 
         </section>
 
