--- a/specific-tabs/arab-kaly.html
+++ b/specific-tabs/arab-kaly.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>منزل عرب كلى | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/arab-kaly.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">منزل عرب كلى</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,13 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+تم اختيار منزل عرب كلى نظراً لكونه من أكبر المنازل الباقية بمدينة رشيد ولموقعه المتميز وقيمته الأثرية أن يكون متحفاً حربياً لمدينة رشيد تخليداً لذكرى انتصار المدينة الباسلة على حملة فريزر عام 1807م وتأخر دخول الإنجليز لمصر نظراً لمناعة هذه الجهة الغربية حتى عام 1882م. افتتح المتحف السيد الرئيس جمال عبد الناصر عام 1959م أثناء زيارته لمدينة رشيد خلال احتفالها بذكرى الانتصار. ويعتبر 19 سبتمبر من كل عام عيداً قرمياً لمحافظة البحيرة تخليداً لمناسبة الانتصار.
+<br>
+في عام 1985م تم تطوير المتحف وإثرائه بالمعروضات التي تعبر عن تاريخ مدينة رشيد، وأضيفت إليه الحديقة المقابلة للمنزل لتصبح حديقة متحفية للعرض المكشوف للقطع الأثرية المكتشفة بالمدينة. وقد قام الرئيس محمد حسني مبارك - بافتتاح المتحف وسُمًَى بمتحف رشيد الوطنى.
+<br>
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+ضمن خطة المجلس الأعلى للآثار في تطوير المتاحف المصرية، فقد تم ترميم منزل عرب كلى ترميماً شاملاً وإعداد سيناريو عرض متحفى وإثرائه بالمعروضات الأثرية على مر العصور واللوحات الجدارية التي تمثل الحياة اليومية بالمدينة، وتم عرض هذه المعروضات بطوابق المنزل، وكذلك تطوير الحديقة المتحفية المقابلة للمتحف وإنشاء وحدات خدمية بها حتى يخلى مبنى المتحف من أي مكاتب إدارية، وتشمل قاعة للندوات، قاعة لكبار الزوار، إدارة للمتحف، قسم لترميم الآثار، ويعرض بالفناء الخارجي الغربي للمتحف سبيل بشباك نحاسى كنموذج للأسبلة الملحقة بالمنازل في العصر العثماني (سبيل جبري).
+
 
 
 
@@ -63,7 +67,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#arab-kaly" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
