--- a/specific-tabs/bawaba-reesh.html
+++ b/specific-tabs/bawaba-reesh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>بوابة أبو الريش | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/bawaba-reesh.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">بوابة أبو الريش</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,13 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
-
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+بوابة أبو الريش هي بوابة تاريخية في مدينة رشيد بمحافظة البحيرة في مصر، وهي من البوابات الأثرية التي تحتاج إلى ترميم عاجل. تُعد هذه البوابة جزءًا من سور رشيد القديم الذي بناه السلطان المملوكي قنصوة الغوري، ويوجد بالقرب منها ضريح الشيخ أبو الريش وآخرين. تعرضت البوابة للإهمال مما أدى إلى تدهور حالتها وقلق حول مصيرها الأثري. 
+<br>
+بنيت كجزء من سور رشيد الذي أمر السلطان المملوكي قنصوة الغوري ببنائه.
+<br>
+تعد البوابة الشمالية لمدينة رشيد.
+<br>
+توجد بالقرب منها ضريح للشيخ أبو الريش، ويعود تاريخ الضريح إلى ما قبل بناء السور.
 
 
 
@@ -63,7 +67,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#bawaba-reesh" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
