--- a/specific-tabs/beshara-church.html
+++ b/specific-tabs/beshara-church.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>كنيسة البشارة | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/beshara-church.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">كنيسة البشارة</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,27 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+                        التأسيس: بُنيت الكنيسة في أواخر القرن التاسع عشر، حوالي عام 1875، لتخدم الجالية الكاثوليكية من الأجانب الذين قدموا إلى دمنهور بسبب ازدهار تجارة محالج القطن آنذاك.
+<br>
+احتفال اليوبيل: في مارس 2025، احتفلت الكنيسة بمرور 150 عامًا على تأسيسها بحضور مطران الكنيسة اللاتينية بمصر، كلاوديو لوراتي، وعدد من الشخصيات الكنسية الأخرى.
+<br>
+التجديدات: شهدت الكنيسة تجديدات وتطويرات على مر السنين للحفاظ على طرازها المعماري الفريد. 
+<br>
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+الطراز المعماري: تتميز الكنيسة بتصميمها المعماري الفريد والمختلف عن كنائس أخرى في مصر.
+<br>
+
+الجرس الأثري: تضم الكنيسة جرسًا أثريًا تم تركيبه على منارتها عام 1881.
+<br>
+
+<br>
+الطقوس: تتبع الكنيسة الطائفة الكاثوليكية اللاتينية، وتقام فيها الصلوات والقداسات وفقًا لهذه الطقوس. 
+
+<br>
+العنوان: تقع الكنيسة في شارع تماموس، بالقرب من محطة السكة الحديد بمدينة دمنهور.
+<br>
+التطوير العمراني: تقع الكنيسة في منطقة شهدت تطورًا، خاصةً ميدان المحطة بدمنهور، مما يجعلها جزءًا من النسيج الحضاري للمدينة. 
+
 
 
 
@@ -63,7 +81,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#beshara-church" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
