--- a/specific-tabs/edfena.html
+++ b/specific-tabs/edfena.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>كوبري السكة الحديد بادفينا | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/edfena.jpeg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">كوبري السكة الحديد بادفينا</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,14 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+كوبري السكة الحديد بإدفينا هو جزء حيوي من البنية التحتية المصرية، يقع عند منطقة قناطر إدفينا الشهيرة على فرع رشيد لنهر النيل، بالقرب من مدينة رشيد في محافظة البحيرة. 
+<br>
+يخدم الكوبري كوصلة نقل مهمة، حيث يحمل خط السكة الحديد الذي يربط بين منطقة البوصيلي ومدينة دسوق. وما يميزه هندسيًا هو احتوائه على جزء متحرك (كوبري متحرك)، يتم فتحه للسماح بمرور السفن والمراكب في المجرى الملاحي لنهر النيل، ويغلق لعبور القطارات. 
+<br>
+يعتبر الكوبري تحفة هندسية على سطح النيل. وقد تم بناء القناطر والكوبري المرافق لها في فترة الأربعينيات والخمسينيات من القرن الماضي، وتحديدًا في عهد الملك فاروق حوالي عام 1950. 
+<br>
+وفي إطار جهود تطوير المنطقة، تم في عام 2016 تفقد أعمال تطوير مزلقان محطة قطار إدفينا وإنشاء كوبري جديد للسيارات يهدف إلى تحقيق السيولة المرورية وتخفيف الازدحام بالمنطقة. 
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
 
 
 
@@ -63,7 +68,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#edfena   " class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
