--- a/specific-tabs/eyelife.html
+++ b/specific-tabs/eyelife.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>قصر عين الحياة | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/eyelife.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">قصر عين الحياة</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,20 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+مساحة 24 فدانًا ويحتوى على 360 غرفة بعدد أيام السنة!         
+<br>
+قصر عين الحياة.. بناه حفيد محمد على لزوجته قبل 120 عامًا. 
+<br>
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+وعلى بعد خطوات من «الحديقة اليابانية» وخلف مبنى مستشفى حلوان العام، وبالقرب من مبنى رئاسة الحي، تجد قصر عين الحياة أو بمسمى أدق ما تبقى من القصر الأثري والذي يعد من أكبر قصور الجمهورية.
+<br>
+
+وشيد القصر في 1895، ليكون سكنًا لـ«الأميرة عين الحياة» زوجة السلطان حسين كامل، حفيد محمد علي باشا الكبير، مؤسس الأسرة العلوية في مصر.
+<br>
+
+ويقع القصر على مساحة 24 فدانًا ويحتوى على 365 غرفة بعدد أيام العام، وبالعودة إلى صور القصر التي التقطت له قبل نحو 100 عام نجد القصر يضاهي في روعته أجمل القصور الفرنسية والإنجليزية والتي اشتهرت بمبانيها العالية وجدرانها المنحوتة بالزخارف والتماثيل.
+
+
 
 
 
@@ -63,7 +74,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#eyelife" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
