--- a/specific-tabs/mikhaiel.html
+++ b/specific-tabs/mikhaiel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>كنيسة الملاك ميخائيل | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/mikhaiel.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">كنيسة الملاك ميخائيل</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,7 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
-
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+تحتوى کنيسة الملاک بدمنهور على اثنتين وسبعين أيقونة تمثل موضوعات متعددة ومتنوعة سواء من العهد القديم لقصص الأنبياء قبل المسيح ، أو موضوعات تعبر عن الدين المسيحي کالبشارة والميلاد والعماد والصلب والقيامة والصعود وغيرها ، وکذلک أيقونات تمثل الملائکة والقديسين والشهداء إلى آخره من الموضوعات التى تميزت بها الأيقونات وخاصة فى مصر.وحيث أنه يتعذر دراسة کل هذه الأيقونات فى بحث واحد فقد تم اختيار بعض هذه الأيقونات المميزة التى تمثل الموضوعات المتنوعة المرسومة فى باقى الأيقونات بالکنيسة.فمن موضوعات العهد القديم تم دراسة أيقونة تمثل صعود إيليا الى السماء ، وقد تميزت هذه الأيقونة باحتوائها على اسم واقفها على الکنيسة وکذلک المدينة التى رسمت فيها وسنة رسمها 1571 للشهداء.ومن الموضوعات المسيحية تم دراسة عدة أيقونات تمثل هذه الموضوعات مثل: أيقونة البشارة ، أيقونة العذراء والطفل (التجسد) ، أيقونة العماد ، أيقونة دخول المسيح أورشليم ، أيقونة السيد المسيح (ضابط الکون) ، أيقونة الصلبوت.ومن الأيقونات التى تمثل الملائکة تم دراسة أيقونة تمثل الملاک ميخائيل التى سميت الکنيسة باسمه ، وقد تميزت هذه الأيقونة باحتوائها على کتابات دعائية بالخط العربي ، وتاريخ الأيقونة بالأرقام القبطية ويمثل سنة 1466 للشهداء الذى يقابل سنة 1163 ه / 1750 م.ومن أيقونات القديسين تم دراسة أيقونة تمثل القديس بطرس وبولس ، وتتميز باحتوائها على سطرين أسفل الأيقونة بالخط العربي يحتوى اسم واقف الأيقونة واسم الرسام (انسطاسى الرومي) وسنة رسمها 1571 للشهداء.ومن أيقونات الشهداء تم دراسة أيقونة القديسة دميانة والأربعين قديسة الشهيدات ، وأيقونة الشهيد مارجرجس الروماني ، وأيقونة رأس القديس يوحنا المعمدان.وهذه الأيقونات المختارة رسمت فى القرنين الثانى عشر والثالث عشر للهجرة / الثامن عشر والتاسع عشر للميلاد ، وتنوعت الأساليب الفنية المستخدمة بين الأسلوب القبطي والأورشليمي واليوناني ، ونفذت بأسلوب التمبرا.
 
 
 
@@ -63,7 +61,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#mikhaiel" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
