--- a/specific-tabs/zaglol.html
+++ b/specific-tabs/zaglol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>مسجد زغلول | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/zaglol2.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">مسجد زغلول</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,14 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+مسجد زغلول هو أحد أكبر مساجد مدينة رشيد وأقدمها، ويرجع تاريخ بنائه إلى عصر الدولة المملوكية، وكان مركزًا للحركة العلمية والدينية والوطنية، ومنه انطلقت شرارة المقاومة الشعبية ضد الحملة الفرنسية 1801، وحملة فريزر 1807
+<br>
+يعود تاريخ بناء مسجد زغلول الأثرى لعام 985 هـ ــ 1587م، بالجزء الجنوبى لمدينة رشيد. وسمى بهذا الاسم نسبة لمؤسسه زغلول، وهو أحد مماليك هارون، الذي عاش في القرن السابع عشر، ويوجد به ضريح «زغلول».
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+<br>
+يقع المسجد الذي أسسه زغلول، مملوك السيد هارون أحد أمراء القرن السابع عشر الميلادي وذلك على الطراز العثماني (في عام 955 هجرية في نهاية العصر المملوكي)، في الجزء الجنوبى لمدينة رشيد وهو مسجل أثر في سجل الآثار الإسلامية والقبطية، وهو عبارة عن جامعين متصلين ببعضهما، ويبلغ طوله 90 مترا، وعرضه48 مترا، وكان يحتوي علي244 عمودا من الرخام والجرانيت، وأنشئ سقفه علي شكل قباب صغيرة، وبه حديقة مغروس بها النخيل، وبداخله ضريح زغلول.
+<br>
+في عام 2018 افتتح الدكتور خالد العناني، وزير الآثار، والدكتور محمد مختار جمعة، وزير الأوقاف، المرحلة الأولى من ترميم مسجد زغلول الأثري بمدينة رشيد بمحافظة البحيرة. حضر مراسم الافتتاح المهندس وعد الله أبوالعلا، رئيس قطاع المشروعات، والدكتور جمال مصطفى، رئيس قطاع الآثار الإسلامية والقبطية واليهودية، ومحمد عباس، عضو مجلس النواب عن دائرة رشيد، وسكرتير عام محافظة البحيرة، وأدوا صلاة الظهر داخل المسجد.
 
 
 
@@ -63,7 +68,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#zaglol" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
