--- a/specific-tabs/der-serian.html
+++ b/specific-tabs/der-serian.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مسجد التوبة | جولة في متحف البحيرة</title>
+    <title>دير العذراء - السريان | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/toba.jpeg" class="opera-image">
+                <img src="../imgs/der-serian.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11">دير العذراء - السريان</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,9 +43,19 @@
                     <h2> معلومات</h2>
                     <p>
 
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
+بني هذا الدير في القرن السادس الميلادي، وقد سمي بهذا الاسم لأن العديد من الرهبان السوريين أقاموا فيه على مر القرون.
+<br>
+نسبت الكنيسة الرئيسية في الدير إلى السيدة العذراء، وتحتوي على جداريات رائعة، ويعلوالهيكل قبة مزينة بمشاهد من الكتاب المقدس مثل منظر يصور ميلاد السيد المسيح.
+<br>
 
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
+وفي 1988م أدى حريق صغير بالديرإلى تدمير جدارية من القرن الثاني عشر الميلادي، فظهرت تحتها جدارية نادرة تعود إلى عام 950م، وممثل بها مشهد الاحتفال بالسيدة العذراء مريم.
+<br>
+
+ومن أهم سمات الكنيسة أبواب الحرم المقدس وهي مزينة بصور للسيد المسيح، والسيدة العذراء، وقديسين آخرين.
+<br>
+
+اكتشف الأوروبيون مجموعة نادرة من المخطوطات السريانية في مكتبة الدير خلال القرن التاسع عشر الميلادي، وهى موجودة حاليًا بمكتبة الفاتيكان ومؤسسات أخرى، وتشمل تلك المجموعة مخطوطات فريدة من أقدم النصوص اليونانية لأرسطو، وإقليدس، وأبقراط.
+
 
 
 
@@ -63,7 +73,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#toba" class="back-btn">
+                <a href="../index.html#der-serian" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
